<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_sheet"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/add_money_text"
        android:textColor="@color/black"
        android:textSize="@dimen/test_size_16" />

    <EditText
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_grey"
        android:drawableRight="@drawable/currency_icon"
        android:drawablePadding="@dimen/padding_small"
        android:drawableTint="@color/black"
        android:hint="@string/text_enter_amount"
        android:inputType="text"
        android:padding="@dimen/padding_custom_10"
        android:textColorHint="@color/grey_400"
        android:visibility="visible"
        android:layout_marginBottom="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/recommended"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_edit_grey"
        android:layout_marginBottom="@dimen/margin_default"
        android:padding="@dimen/margin_2dp"
        android:visibility="visible">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabPaddingEnd="@dimen/padding_default"
            app:tabPaddingStart="@dimen/padding_default"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/grey_600" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnAddFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/txt_Payment"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_rx_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="10">

            <RadioButton
                android:id="@+id/rb_opd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="@string/txt_online" />

            <RadioButton
                android:id="@+id/rb_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/txt_upi" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_secondary_parameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPatientAge"
        android:layout_marginTop="@dimen/margin_custom"
        android:layout_marginBottom="@dimen/margin_default"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/btnVideoBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_grey"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium"
            android:text="@string/txt_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_custom3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnOpdBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/border_button"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium"
            android:text="@string/txt_recharge"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_custom3" />

    </LinearLayout>

</LinearLayout>